--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div id="logo">
                             <img src="src/logo.png" height="100%">
                         </div>
-                        <div id="navigationBar_logoText">
+                        <div class="navigationBar_logoText">
                             <div class="navigationBar_logoTextItem1">Physiotherapie</div>
                             <div class="navigationBar_logoTextItem2">Praxis Weber</div>
                         </div>
@@ -213,7 +213,7 @@
             </div>
         </section>
     </div>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
