--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             </div>
         </section>
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
