--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <!--<div id="headerWrapper">
+    <div id="headerWrapper">
         <div id="header-leftSide"></div>
         <div id="header-emptyTop"></div>
         <div id="header">
@@ -79,6 +79,8 @@
                 </div>
             </div>
         </section>
+    </div>
+    <!--
         <section id="secondSection">
             <div class="secondSection_inner">
                 <div class="aboutMeWrapper">
