--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
     <link rel="stylesheet" href="mobile.css">
-    <link rel="stylesheet" href="tablet.css">
+    <!--<link rel="stylesheet" href="tablet.css">-->
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
