--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             </div>
         </div>
     </div>
+
+    <!--
     <div id="content">
         <section id="firstSection">
             <div class="firstSection_inner">
@@ -212,7 +214,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div> -->
     <!-- <script src="script.js"></script> -->
 </body>
 
