--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div id="header-leftSide"></div>
         <div id="header-emptyTop"></div>
         <div id="header">
-            <div class="navigationBar">
+            <!--<div class="navigationBar">
                 <div class="navigationBar_inner">
                     <div id="navigationBar_logo">
                         <div id="logo">
-                            <!-- <img src="src/logo.png" height="100%">-->
+<img src="src/logo.png" height="100%">
                         </div>
                         <div class="navigationBar_logoText">
                             <div class="navigationBar_logoTextItem1">Physiotherapie</div>
@@ -55,7 +55,7 @@
                         <div class="hamburgerMenuLine"></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div id="header_inner">
                 <div id="header_headlineWrapper">
                     <h1>Physiotherapie<br>Weber</h1>
