--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <!--<link rel="stylesheet" href="style.css">-->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
-    <!--<link rel="stylesheet" href="tablet.css">-->
-
-
+    <link rel="stylesheet" href="tablet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -33,11 +31,11 @@
         <div id="header-leftSide"></div>
         <div id="header-emptyTop"></div>
         <div id="header">
-            <!--<div class="navigationBar">
+            <div class="navigationBar">
                 <div class="navigationBar_inner">
                     <div id="navigationBar_logo">
                         <div id="logo">
-<img src="src/logo.png" height="100%">
+                            <img src="src/logo.png" height="100%">
                         </div>
                         <div class="navigationBar_logoText">
                             <div class="navigationBar_logoTextItem1">Physiotherapie</div>
@@ -55,7 +53,7 @@
                         <div class="hamburgerMenuLine"></div>
                     </div>
                 </div>
-            </div>-->
+            </div>
             <div id="header_inner">
                 <div id="header_headlineWrapper">
                     <h1>Physiotherapie<br>Weber</h1>
@@ -91,9 +89,9 @@
                         <button type="button" class="cta-button">MEHR ERFAHREN</button>
                     </div>
                     <div class="aboutMeImageBox">
-                        <!--<div class="image1"><img src="src/training.jpg" height="100%"></div>
+                        <div class="image1"><img src="src/training.jpg" height="100%"></div>
                         <div class="image2"><img src="src/wow.jpg" height="100%"></div>
-                        <div class="image3"><img src="src/winner.jpg" height="100%"></div> -->
+                        <div class="image3"><img src="src/winner.jpg" height="100%"></div>
                     </div>
                 </div>
             </div>
@@ -182,7 +180,7 @@
             <div class="footer_inner">
                 <div class="footerBox">
                     <div class="footerLogo">
-                        <!--<div class="footerLogo-logobox"><img src="src/logo.png" width="60px"></div>-->
+                        <div class="footerLogo-logobox"><img src="src/logo.png" width="60px"></div>
                         <div class="footerLogo-textbox">
                             <div class="footerLogo-textbox-1">Physiotherapie</div>
                             <div class="footerLogo-textbox-2">Praxis Weber</div>
@@ -214,7 +212,7 @@
             </div>
         </section>
     </div>
-    <!-- <script src="script.js"></script> -->
+    <script src="script.js"></script>
 </body>
 
 </html>
