--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -180,7 +180,7 @@
             <div class="footer_inner">
                 <div class="footerBox">
                     <div class="footerLogo">
-                        <div class="footerLogo-logobox"><img src="src/logo.png" width="60px"></div>
+                        <div class="footerLogo-logobox"><img src="src/logo.png" height="100%"></div>
                         <div class="footerLogo-textbox">
                             <div class="footerLogo-textbox-1">Physiotherapie</div>
                             <div class="footerLogo-textbox-2">Praxis Weber</div>
