--- a/index.html
+++ b/index.html
@@ -179,15 +179,6 @@
         <section id="footer">
             <div class="footer_inner">
                 <div class="footerBox">
-                    <div class="footerLogo">
-                        <div class="footerLogo-logobox"><img src="src/logo.png" height="100%"></div>
-                        <div class="footerLogo-textbox">
-                            <div class="footerLogo-textbox-1">Physiotherapie</div>
-                            <div class="footerLogo-textbox-2">Praxis Weber</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="footerBox">
                     <div class="footerHeadline">Kontakt</div>
                     <div class="footerText">06352 7190327</div>
                     <div class="footerText">Crayenbühlstraße 1a</div>
@@ -209,9 +200,20 @@
                         <i class="fa-brands fa-whatsapp"></i>
                     </div>
                 </div>
+                <div class="footerBox">
+                    <div class="footerLogo">
+                        <div class="footerLogo-logobox"><img src="src/logo.png" height="100%"></div>
+                        <div class="footerLogo-textbox">
+                            <div class="footerLogo-textbox-1">Physiotherapie</div>
+                            <div class="footerLogo-textbox-2">Praxis Weber</div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </section>
     </div>
+    <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
     <script src="script.js"></script>
 </body>
 
