--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 </head>
 
 <body>
+    <div class="overlay">
+        <div class="closeButton">
+            <div class="closeButton_line1"></div>
+            <div class="closeButton_line2"></div>
+        </div>
+    </div>
     <div id="headerWrapper">
         <div id="header-leftSide"></div>
         <div id="header-emptyTop"></div>
