--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
 
 <body>
     <div class="overlay">
-        <div class="closeButton">
-            <div class="closeButton_line1"></div>
-            <div class="closeButton_line2"></div>
+        <div class="overlayHeader">
+
+            <div class="closeButton">
+                <div class="closeButton_line1"></div>
+                <div class="closeButton_line2"></div>
+            </div>
         </div>
+        <div class="overlayNavigation">
+            <div class="overlayNavigation-item">Home</div>
+            <div class="overlayNavigation-item">Leistungen</div>
+            <div class="overlayNavigation-item">Kontakt</div>
+        </div>
+        <div class="overlayBackground"></div>
     </div>
     <div id="headerWrapper">
         <div id="header-leftSide"></div>
@@ -95,8 +104,8 @@
                         <button type="button" class="cta-button">MEHR ERFAHREN</button>
                     </div>
                     <div class="aboutMeImageBox">
-                        <div class="image1"><img src="src/training.jpg" height="100%"></div>
                         <div class="image2"><img src="src/wow.jpg" height="100%"></div>
+                        <div class="image1"><img src="src/training.jpg" height="100%"></div>
                         <div class="image3"><img src="src/winner.jpg" height="100%"></div>
                     </div>
                 </div>
