--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                         <div id="navigationBar_menuItem">PRAXIS</div>
                         <div id="navigationBar_menuItem">KONTAKT</div>
                     </div>
-                    <div class="hamburgerMenu">
+                    <button class="hamburgerMenu">
                         <div class="hamburgerMenuLine"></div>
                         <div class="hamburgerMenuLine"></div>
                         <div class="hamburgerMenuLine"></div>
-                    </div>
+                    </button>
                 </div>
             </div>
             <div id="header_inner">
