--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="closeButton_line2"></div>
             </div>
         </div>
-        <div class="overlayNavigation">
-            <div class="overlayNavigation-item">Home</div>
-            <div class="overlayNavigation-item">Leistungen</div>
-            <div class="overlayNavigation-item">Kontakt</div>
+        <div class="overlayNavigation overlayAnimation">
+            <a class="overlayNavigation-item">Home</a>
+            <a class="overlayNavigation-item">Leistungen</a>
+            <a class="overlayNavigation-item">Kontakt</a>
         </div>
         <div class="overlayBackground"></div>
     </div>
