--- a/index.html
+++ b/index.html
@@ -28,27 +28,26 @@
 
 <body>
     <div class="overlay">
-        <div class="overlayInner">
-            <div class="overlayHeader">
-                <div class="closeButton">
-                    <div class="closeButton_line1"></div>
-                    <div class="closeButton_line2"></div>
-                </div>
-            </div>
-            <div class="overlayNavigation overlayAnimation">
-                <a class="overlayNavigation-item">Home</a>
-                <a class="overlayNavigation-item">Leistungen</a>
-                <a class="overlayNavigation-item">Kontakt</a>
-            </div>
-            <div class="overlayFooter">
-                <div class="overlayFooter-line"></div>
-                <div class="overlayFooter-social">
-                    <a><i class="fa-brands fa-instagram"></i></a>
-                    <a><i class="fa-brands fa-square-facebook"></i></a>
-                    <a><i class="fa-brands fa-whatsapp"></i></a>
-                </div>
+        <!-- <div class="overlayInner"> -->
+        <div class="overlayHeader">
+            <div class="closeButton">
+                <div class="closeButton_line1"></div>
+                <div class="closeButton_line2"></div>
             </div>
         </div>
+        <div class="overlayNavigation overlayAnimation">
+            <a class="overlayNavigation-item">Home</a>
+            <a class="overlayNavigation-item">Leistungen</a>
+            <a class="overlayNavigation-item">Kontakt</a>
+        </div>
+        <div class="overlayFooter">
+            <div class="overlayFooter-social">
+                <a><i class="fa-brands fa-instagram"></i></a>
+                <a><i class="fa-brands fa-square-facebook"></i></a>
+                <a><i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+        <!-- </div> -->
     </div>
     <div id="headerWrapper">
         <div id="header-leftSide"></div>
