--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -97,6 +98,7 @@
                     <div class="text">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
                 </div>
                 <div class="sectionRight">
+                    <img src="src/4.png" width="600px">
                 </div>
             </div>
         </section>
@@ -198,6 +200,55 @@
                 </div>
             </div>
         </section>
+
+        <!-- <section id="testSection2">
+            <div class="testSection2-left">
+                <h1>Unsere Leistungen</h1>
+            </div>
+            <div class="testSection2-right">
+                <div class="testSection_inner">
+                    <div class="testSection_sub">
+                        <div class="testSection_subPicSection">
+                            <div class="testSection_subPic">
+                                <i class="fa-solid fa-staff-snake"></i>
+                            </div>
+                            <div class="blueStuff"></div>
+                        </div>
+                        <div class="testSection_subText">
+                            <h2>Vielseitige<br>Therapieverfahren</h2>
+                            <div class="description">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
+                        </div>
+                    </div>
+                    <div class="testSection_sub">
+                        <div class="testSection_subPicSection">
+                            <div class="testSection_subPic">
+                                <i class="fa-solid fa-handshake-angle"></i>
+                            </div>
+                            <div class="blueStuff"></div>
+                        </div>
+                        <div class="testSection_subText">
+                            <h2>Effektives Coaching</h2>
+                            <div class="description">im Bereich Schmerzpsychologie und Wahrnehmung</div>
+                        </div>
+                    </div>
+                    <div class="testSection_sub">
+                        <div class="testSection_subPicSection">
+                            <div class="testSection_subPic">
+                                <i class="fa-solid fa-dumbbell"></i>
+                            </div>
+                            <div class="blueStuff"></div>
+                        </div>
+                        <div class="testSection_subText">
+                            <h2>Professionnelle Fitnessberatung</h2>
+                            <div class="description">• Erstellung von Fitnessplänen<br>
+                                • gemeinsames Training<br>
+                                • Personal Training</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
+
         <section id="footer">
             <div class="footer_inner">
                 <div class="footerBox">
