--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
                         </div>
                     </div>
                     <div id="navigationBar_menu">
-                        <div id="navigationBar_menuItem">LEISTUNGEN</div>
                         <div id="navigationBar_menuItem">PRAXIS</div>
+                        <div id="navigationBar_menuItem">ÜBER MICH</div>
+                        <div id="navigationBar_menuItem">LEISTUNGEN</div>
                         <div id="navigationBar_menuItem">KONTAKT</div>
                     </div>
                     <button class="hamburgerMenu">
@@ -253,17 +254,16 @@
             <div class="footer_inner">
                 <div class="footerBox">
                     <div class="footerHeadline">Kontakt</div>
-                    <div class="footerText">06352 7190327</div>
+                    <div class="footerText">Inhaber B.Sc. Frederik Weber</div>
+                    <div class="footerText">Heilpraktiker für Physiotherapie</div>
                     <div class="footerText">Crayenbühlstraße 1a</div>
                     <div class="footerText">67295 Bolanden-Weierhof</div>
 
                 </div>
                 <div class="footerBox">
-                    <div class="footerHeadline">Links</div>
-                    <div class="footerText">Praxis</div>
-                    <div class="footerText">Leistungen</div>
-                    <div class="footerText">Kontakt</div>
-
+                    <div class="footerHeadline">Telefon</div>
+                    <div class="footerText"><i class="fa-solid fa-phone-volume"></i>06352 7190327</div>
+                    <div class="footerText"><i class="fa-solid fa-mobile-screen"></i>01575 4365617</div>
                 </div>
                 <div class="footerBox">
                     <div class="footerHeadlineSocial">Social Media</div>
