--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
     <script src="https://kit.fontawesome.com/8fc67f8040.js" crossorigin="anonymous"></script>
 
 
-
-
-
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Praxis Weber</title>
 </head>
 
@@ -99,7 +95,7 @@
     <div id="content">
         <section id="firstSection">
             <div class="firstSection_inner">
-                <div data-aos="fade-right" data-aos-duration="900" class="sectionLeft">
+                <div class="sectionLeft">
                     <h5>Was ist Physiotherapie?</h5>
                     <div class="text">Die Physiotherapie behandelt Einschränkungen der Bewegungs- und Funktionsfähigkeit des Körpers und ist ein ärztlich verordnetes Heilmittel. Sie stellt eine sinnvolle Ergänzung und manchmal auch Alternative zu Operationen oder Medikamenten dar. Zur Physiotherapie zählen neben krankengymnastischen Übungen auch physikalische Maßnahmen, Massagen und manuelle Lymphdrainagen.</div>
                 </div>
@@ -299,13 +295,6 @@
     </div>
     <div class="backToTop"><i class="fa-solid fa-angle-up"></i></div>
     <script src="script.js"></script>
-
-
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-        AOS.init();
-
-    </script>
 
 </body>
 
