--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="tablet.css">
     <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="animations.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -93,7 +94,7 @@
     </div>
 
     <div id="content">
-        <section id="firstSection">
+        <section id="firstSection" class="moveUpRevealOverlay">
             <div class="firstSection_inner">
                 <div class="sectionLeft">
                     <h5>Was ist Physiotherapie?</h5>
@@ -108,7 +109,7 @@
             <div class="secondSection_inner">
                 <div class="aboutMeWrapper">
                     <div class="aboutMeWrapperBG"></div>
-                    <div class="aboutMeTextBox">
+                    <div class="aboutMeTextBox fromLeftWrapper">
                         <h4>Über mich</h4>
                         <h5>Heilpraktiker für<br>Physiotherapie</h5>
                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
@@ -118,7 +119,28 @@
                         <div class="image2"><img src="src/wow.jpg" height="100%"></div>
                         <div class="image1"><img src="src/training.jpg" height="100%"></div>
                         <div class="image3"><img src="src/winner.jpg" height="100%"></div>
+
+
+
+                        <div class="stickyContainer">
+                            <div class="stickyColumnLeft">
+                                <div class="stickyColumn">
+                                    <div class="stick1"></div>
+                                </div>
+                                <div class="stick3"></div>
+                            </div>
+
+                            <div class="stickyColumnRight">
+                                <div class="stickyColumn">
+                                    <div class="stick2"></div>
+                                </div>
+                                <div class="stick4"></div>
+                            </div>
+                        </div>
+
+
                     </div>
+
                 </div>
             </div>
         </section>
