--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
 
     <div id="content">
-        <section id="firstSection" class="moveUpRevealOverlay">
+        <section id="firstSection">
             <div class="firstSection_inner">
                 <div class="sectionLeft">
                     <h5>Was ist Physiotherapie?</h5>
@@ -106,6 +106,9 @@
             </div>
         </section>
         <section id="secondSection">
+            <div class="secondSection-overlay moveUpRevealOverlay">
+            </div>
+            <!-- <div class="firstSection-overlay"></div> -->
             <div class="secondSection_inner">
                 <div class="aboutMeWrapper">
                     <div class="aboutMeWrapperBG"></div>
