--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     </div>
     <div id="headerWrapper">
         <div id="header-leftSide"></div>
-        <div id="header-emptyTop"></div>
+
+        <!--<div id="header-emptyTop"></div>-->
         <div id="header">
             <div class="navigationBar">
                 <div class="navigationBar_inner">
@@ -80,6 +81,7 @@
                     </button>
                 </div>
             </div>
+            <div id="header-emptyTop"></div>
             <div id="header_inner">
                 <div id="header_headlineWrapper">
                     <h1>Physiotherapie<br>Weber</h1>
@@ -90,11 +92,24 @@
                     <div class="address"><i class="fa-solid fa-location-dot"></i>Crayenbühlstraße 1a, Bolanden-Weierhof</div>
                 </div>
             </div>
+            <div class="headerContactWrapper">
+                <div class="headerContact">
+                    <div class="headerContactHeadline">Telefon</div>
+                    <div class="headerContactContent">063022269</div>
+                </div>
+                <div class="headerContact">
+                    <div class="headerContactHeadline">Adresse</div>
+                    <div class="headerContactContent">Crayenbühlstraße 1a</div>
+                    <div class="headerContactContent">67295 Bolanden-Weierhof</div>
+                </div>
+                <div class="headerContact">Adresse</div>
+            </div>
         </div>
     </div>
 
     <div id="content">
         <section id="firstSection">
+            <div class="firstSection-overlay"></div>
             <div class="firstSection_inner">
                 <div class="sectionLeft">
                     <h5>Was ist Physiotherapie?</h5>
@@ -107,85 +122,41 @@
         </section>
         <section id="secondSection">
             <div class="secondSection-overlay moveUpRevealOverlay">
+                <!--<div class="aboutMeTextBox fromBottomWrapper">
+                    <h4>Über mich</h4>
+                    <h5>Heilpraktiker für<br>Physiotherapie</h5>
+                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
+                    <button type="button" class="cta-button">MEHR ERFAHREN</button>
+                </div> -->
             </div>
             <!-- <div class="firstSection-overlay"></div> -->
             <div class="secondSection_inner">
                 <div class="aboutMeWrapper">
-                    <div class="aboutMeWrapperBG"></div>
-                    <div class="aboutMeTextBox fromLeftWrapper">
+                    <div class="aboutMeTextBox">
                         <h4>Über mich</h4>
                         <h5>Heilpraktiker für<br>Physiotherapie</h5>
                         <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</div>
                         <button type="button" class="cta-button">MEHR ERFAHREN</button>
                     </div>
                     <div class="aboutMeImageBox">
-                        <div class="image2"><img src="src/wow.jpg" height="100%"></div>
-                        <div class="image1"><img src="src/training.jpg" height="100%"></div>
-                        <div class="image3"><img src="src/winner.jpg" height="100%"></div>
-
-
-
-                        <div class="stickyContainer">
-                            <div class="stickyColumnLeft">
-                                <div class="stickyColumn">
-                                    <div class="stick1"></div>
-                                </div>
-                                <div class="stick3"></div>
-                            </div>
-
-                            <div class="stickyColumnRight">
-                                <div class="stickyColumn">
-                                    <div class="stick2"></div>
-                                </div>
-                                <div class="stick4"></div>
-                            </div>
+                        <div class="aboutMeImageBox-image1">
+                            <div class="imagerino1"></div>
                         </div>
-
-
-                    </div>
-
-                </div>
-            </div>
-        </section>
-        <section id="thirdSection">
-            <div class="thirdSection_inner">
-                <h4>Die Praxis</h4>
-                <div class="thirdSection_grid">
-                    <div class="grid-item1">1</div>
-                    <div class="grid-item2">
-                        <div class="gridtext">
-                            Physiotherapie <br>Weber
+                        <div class="aboutMeImageBox-image2">
+                            <img src="src/aboutMe.jpg">
+                        </div>
+                        <div class="aboutMeImageBox-image3">
+                            <img src="src/training2.jpg">
+                        </div>
+                        <div class="aboutMeImageBox-image4">
+                            <img src="src/logo.png">
                         </div>
                     </div>
-                    <div class="grid-item3">3</div>
-                    <div class="grid-item4">4</div>
-                </div>
-            </div>
-        </section>
-        <section id="fourthSection">
-            <div class="fourthSection_inner">
-                <h5>Unsere Leistungen</h5>
-                <div class="fourthSection_itemWrapper">
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-staff-snake"></i>
-                        <h4>Vielseitige Therapieverfahren</h4>
-                        <div class="text">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
-                    </div>
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-handshake-angle"></i>
-                        <h4>Effektives Coaching</h4>
-                        <div class="text">im Bereich Schmerzpsychologie und Wahrnehmung</div>
-                    </div>
-                    <div class="fourthSection_item">
-                        <i class="fa-solid fa-dumbbell"></i>
-                        <h4>Professionnelle Fitnessberatung</h4>
-                        <div class="text">Erstellung von Fitnessplänen, gemeinsames Training, Personal Training</div>
-                    </div>
+
                 </div>
             </div>
         </section>
         <section id="testSection">
-
             <div class="testSection_inner">
                 <h5>Unsere Leistungen</h5>
                 <div class="testSection_subWrapper">
@@ -226,6 +197,43 @@
                                 • gemeinsames Training<br>
                                 • Personal Training</div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="thirdSection">
+            <div class="thirdSection_inner">
+                <h4>Die Praxis</h4>
+                <div class="thirdSection_grid">
+                    <div class="grid-item1">1</div>
+                    <div class="grid-item2">
+                        <div class="gridtext">
+                            Physiotherapie <br>Weber
+                        </div>
+                    </div>
+                    <div class="grid-item3">3</div>
+                    <div class="grid-item4">4</div>
+                </div>
+            </div>
+        </section>
+        <section id="fourthSection">
+            <div class="fourthSection_inner">
+                <h5>Unsere Leistungen</h5>
+                <div class="fourthSection_itemWrapper">
+                    <div class="fourthSection_item">
+                        <i class="fa-solid fa-staff-snake"></i>
+                        <h4>Vielseitige Therapieverfahren</h4>
+                        <div class="text">Kombination aus Physiotherapie, manueller Therapie, Lymphdrainage und neurologischen Konzepten (bereits ab dem Baby-/Kleinkindalter)</div>
+                    </div>
+                    <div class="fourthSection_item">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                        <h4>Effektives Coaching</h4>
+                        <div class="text">im Bereich Schmerzpsychologie und Wahrnehmung</div>
+                    </div>
+                    <div class="fourthSection_item">
+                        <i class="fa-solid fa-dumbbell"></i>
+                        <h4>Professionnelle Fitnessberatung</h4>
+                        <div class="text">Erstellung von Fitnessplänen, gemeinsames Training, Personal Training</div>
                     </div>
                 </div>
             </div>
